WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276946
Minor fixes to WasmOMGIRGenerator32_64.cpp
https://bugs.webkit.org/show_bug.cgi?id=276946
Summary
Minor fixes to WasmOMGIRGenerator32_64.cpp
Angelos Oikonomopoulos
Reported
2024-07-23 05:11:41 PDT
Fixing some bugs.
Attachments
Add attachment
proposed patch, testcase, etc.
Angelos Oikonomopoulos
Comment 1
2024-07-23 05:15:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31107
EWS
Comment 2
2024-07-24 13:10:25 PDT
Committed
281309@main
(13cb2ea97798): <
https://commits.webkit.org/281309@main
> Reviewed commits have been landed. Closing PR #31107 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-07-24 13:11:12 PDT
<
rdar://problem/132429036
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug