Minor fixes to WasmOMGIRGenerator32_64.cpp https://bugs.webkit.org/show_bug.cgi?id=276946

Reviewed by Justin Michaud.

- Use Stitch/Trunc/TruncHigh to keep the generated B3 readable.
- Use the correct pointer (sans offset) in memory accesses.
- Implement countTrailingZeros.
- Fix the value type of some conversions.

* Source/JavaScriptCore/wasm/WasmOMGIRGenerator32_64.cpp:
(JSC::Wasm::OMGIRGenerator::addArguments):
(JSC::Wasm::OMGIRGenerator::emitCheckAndPreparePointer):
(JSC::Wasm::OMGIRGenerator::connectControlAtEntrypoint):
(JSC::Wasm::OMGIRGenerator::addI64Ctz):
(JSC::Wasm::OMGIRGenerator::addF64ConvertUI64):
(JSC::Wasm::OMGIRGenerator::addF32ConvertUI64):

Canonical link: https://commits.webkit.org/281309@main